# QML-Minimal-Demos

./: .gitignore  CMakeLists.txt  LICENSE  README.en-US.md  README.md  README.zh-CN.md  cleanup_projects.bat
docs/superpowers/plans/: 2026-06-23-fade-in-animation.md
docs/superpowers/specs/: 2026-06-23-fade-in-animation-design.md
qml_busyindicator/: CMakeLists.txt  Demo_BusyIndicatorBasic.qml  Demo_NativeImpl.qml  Demo_NotchedRectRing.qml  Demo_ShapeArc.qml  Main.qml  main.cpp
qml_button/: CMakeLists.txt  CustomButton.qml  Demo_Button.qml  Demo_CheckBox.qml  Demo_CustomButton.qml  Demo_DelayButton.qml  Demo_ItemDelegate.qml  Demo_RadioButton.qml  Demo_RoundButton.qml  Demo_Switch.qml  Demo_TabButton.qml  Demo_ToolButton.qml  Main.qml  main.cpp  res.qrc
qml_container/: CMakeLists.txt  Demo_CustomGroupBox.qml  Demo_Frame.qml  Demo_GroupBox.qml  Demo_Nested.qml  Demo_Pane.qml  Demo_ScrollView.qml  Main.qml  main.cpp
qml_hello/: CMakeLists.txt  Main.qml  main.cpp
qml_js_interaction/: CMakeLists.txt  Demo_JSImportFile.qml  Demo_JSInlineFunc.qml  Demo_JSSignal.qml  Demo_WorkerScript.qml  Main.qml  Utility.js  main.cpp  script.mjs
qml_layout/: CMakeLists.txt  Demo_Column.qml  Demo_Flow.qml  Demo_Grid.qml  Demo_Row.qml  Demo_Stack.qml  Main.qml  main.cpp
qml_signals/: CMakeLists.txt  CustomButton.qml  CustomReceiver.qml  CustomSender.qml  CustomTextField.qml  Demo_CppToQMLSignals.qml  Demo_CrossFileSignals.qml  Demo_DirectBinding.qml  Demo_JsDynamic.qml  Main.qml  main.cpp  myemitter.cpp  myemitter.h
qml_text/: .gitignore  CMakeLists.txt  DemoPage.qml  Demo_LabelBackground.qml  Demo_LabelBasic.qml  Demo_LabelPadding.qml  Demo_TextAlignment.qml  Demo_TextAnimation.qml  Demo_TextBasic.qml  Demo_TextClickable.qml  Demo_TextElide.qml  Demo_TextFit.qml  Demo_TextFont.qml  Demo_TextLink.qml  Demo_TextMarkdown.qml  Demo_TextRich.qml  Demo_TextSelectable.qml  Demo_TextStyle.qml  Demo_TextVsLabel.qml  Demo_TextWrap.qml  FadeInAnimation.qml  Main.qml  Note.qml  TitleSeparator.qml  main.cpp
qml_timer/: CMakeLists.txt  Demo_AnimationControl.qml  Demo_Repeat.qml  Demo_SingleShot.qml  Demo_TriggeredOnStart.qml  Main.qml  main.cpp
qml_tooltip/: CMakeLists.txt  Demo_BasicTooltip.qml  Demo_CustomTooltip.qml  Demo_RichTooltip.qml  Main.qml  main.cpp
qml_windowflags/: .gitignore  CMakeLists.txt  Demo_PopupBasic.qml  Demo_PopupCustom.qml  Demo_PopupDialog.qml  Demo_WindowDialog.qml  Demo_WindowFlags.qml  Demo_WindowFrameless.qml  Demo_WindowSplash.qml  Demo_WindowStayOnTop.qml  Demo_WindowTool.qml  Demo_WindowToolTip.qml  FadeInAnimation.qml  Main.qml  TitleSeparator.qml  main.cpp
